--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mantine/hooks": "^7.4.2",
     "@mantine/modals": "^7.4.2",
     "@mantine/notifications": "^7.4.2",
+    "@prisma/client": "^5.8.1",
     "@tabler/icons-react": "^2.46.0",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
+    "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,6 +37,7 @@
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.4",
+    "prisma": "^5.8.1",
     "typescript": "^5"
   }
 }
