--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.8.1",
     "@tabler/icons-react": "^2.46.0",
     "date-fns": "^3.2.0",
+    "date-fns-tz": "^2.0.0",
     "dayjs": "^1.11.10",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.1.0",
