--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.4",
+    "@date-fns/utc": "^1.1.1",
     "@mantine/core": "^7.4.2",
     "@mantine/dates": "^7.4.2",
     "@mantine/form": "^7.4.2",
